--- a/content/2022/references.bib
+++ b/content/2022/references.bib
@@ -23,3 +23,16 @@
   issn = {0098-3004},
   url = {http://dx.doi.org/10.1016/j.cageo.2018.04.006},
 }
+
+@article{bourne_improving_2011,
+  author = {Bourne, Philip E. and Clark, Timothy W. and Dale, Robert and Waard, Anita and Herman, Ivan and Hovy, Eduard H. and Shotton, David},
+  journal = {Dagstuhl Manifestos},
+  number = {1},
+  year = {2012},
+  pages = {41--60},
+  title = {Improving {The} {Future} of {Research} {Communications} and e-{Scholarship} ({Dagstuhl} {Perspectives} {Workshop} 11331)},
+  volume = {1},
+  doi = {10.4230/DagMan.1.1.41},
+  issn = {2193-2433},
+  url = {http://drops.dagstuhl.de/opus/volltexte/2012/3445},
+}
