Descriptions and tags

--- a/content/blog/force11-2021.md
+++ b/content/blog/force11-2021.md
@@ -1,6 +1,6 @@
 ---
 title: FORCE11 2021 Conference
-description: ''
+description: 'Curvenote is a Gold Sponsor of the upcoming the FORCE11 2021 conference.'
 date: 2021-11-16T20:43:30.986Z
 authors:
   - name: Rowan Cockett
@@ -15,6 +15,8 @@ name: force11-2021
 oxa: oxa:AVQ2dzLNloEd25Io8NbA/B4wmnvPyzVyBNQ8vHZpG
 tags:
   - update
+  - open-science
+thumbnail: thumbnails/force11-2021.png
 ---
 
 # FORCE11 2021 Conference
