--- a/content/blog/references.bib
+++ b/content/blog/references.bib
@@ -37,6 +37,19 @@
   url = {http://drops.dagstuhl.de/opus/volltexte/2012/3445},
 }
 
+@article{Wilkinson2016FAIR,
+  author = {Wilkinson, Mark D. and Dumontier, Michel and Aalbersberg, IJsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and da Silva Santos, Luiz Bonino and Bourne, Philip E. and Bouwman, Jildau and Brookes, Anthony J. and Clark, Tim and Crosas, Merc{\` e} and Dillo, Ingrid and Dumon, Olivier and Edmunds, Scott and Evelo, Chris T. and Finkers, Richard and Gonzalez-Beltran, Alejandra and Gray, Alasdair J.G. and Groth, Paul and Goble, Carole and Grethe, Jeffrey S. and Heringa, Jaap and \textquoteright{}t Hoen, Peter A.C and Hooft, Rob and Kuhn, Tobias and Kok, Ruben and Kok, Joost and Lusher, Scott J. and Martone, Maryann E. and Mons, Albert and Packer, Abel L. and Persson, Bengt and Rocca-Serra, Philippe and Roos, Marco and van Schaik, Rene and Sansone, Susanna-Assunta and Schultes, Erik and Sengstag, Thierry and Slater, Ted and Strawn, George and Swertz, Morris A. and Thompson, Mark and van der Lei, Johan and van Mulligen, Erik and Velterop, Jan and Waagmeester, Andra and Wittenburg, Peter and Wolstencroft, Katherine and Zhao, Jun and Mons, Barend},
+  journal = {Scientific Data},
+  number = {1},
+  year = {2016},
+  month = {mar 15},
+  title = {The {FAIR} {Guiding} {Principles} for scientific data management and stewardship},
+  volume = {3},
+  doi = {10.1038/sdata.2016.18},
+  issn = {2052-4463},
+  url = {http://dx.doi.org/10.1038/sdata.2016.18},
+}
+
 @article{cockburn2000costs,
   author = {Cockburn, Alistair and Williams, Laurie},
   journal = {Extreme programming examined},
