Add conference tags

--- a/content/blog/force11-2021.md
+++ b/content/blog/force11-2021.md
@@ -16,6 +16,7 @@ oxa: oxa:AVQ2dzLNloEd25Io8NbA/B4wmnvPyzVyBNQ8vHZpG
 tags:
   - update
   - open-science
+  - conference
 thumbnail: thumbnails/force11-2021.png
 ---
 
