Press release links

--- a/content/blog/force11-2021.md
+++ b/content/blog/force11-2021.md
@@ -20,7 +20,9 @@ tags:
 thumbnail: thumbnails/force11-2021.png
 ---
 
-# FORCE11 2021 Conference
+```{note} Press Release
+Read the press release on [Curvenote Sponsors FORCE11 to Promote Open Science and Reproducibility](https://curvenote.com/news/curvenote-sponsors-force11-2021).
+```
 
 +++ {"oxa":"oxa:AVQ2dzLNloEd25Io8NbA/PZS359MBDVijTxcZbaLC.5"}
 
