--- a/content/blog/force11-2024.md
+++ b/content/blog/force11-2024.md
@@ -1,6 +1,6 @@
 ---
 title: Continuous Science at FORCE11 2024
-description: 'Curvenote gave a presentation at the FORCE11 2024 conference on continuous science.'
+description: 'At FORCE11 2024 Curvenote presented on our vision of Continuous Science, where the principles of continuous integration and deployment, well-known in software development, can be applied to scientific publishing to improve speed, reproducibility, and feedback loops.'
 date: 2024-08-01
 authors:
   - name: Rowan Cockett
