--- a/content/blog/force11-2024.md
+++ b/content/blog/force11-2024.md
@@ -1,5 +1,6 @@
 ---
-title: Continuous Science at FORCE11 2024
+title: Embracing Continuous Science at FORCE11
+subtitle: Insights from Rowan Cockett at the 2024 Force11 Conference
 description: 'At FORCE11 2024 Curvenote presented on our vision of Continuous Science, where the principles of continuous integration and deployment, well-known in software development, can be applied to scientific publishing to improve speed, reproducibility, and feedback loops.'
 date: 2024-08-01
 authors:
@@ -16,16 +17,35 @@ thumbnail: thumbnails/force11-2024.png
 doi: 10.5281/zenodo.13208054
 ---
 
-This year, Curvenote had the pleasure of attending the FORCE11 2024 conference, where we presented our vision of "Continuous Science." Our talk focused on how the principles of continuous integration and deployment, well-known in software development, can be applied to scientific publishing to improve speed, reproducibility, and feedback loops.
+At Curvenote, we believe in the power of innovation and the importance of making scientific processes as effective and efficient as possible. This philosophy was brought to the forefront during the 2024 Force11 Conference, where our CEO, Rowan Cockett, delivered an inspiring talk on the concept of continuous science.
 
-While scientific discovery has been transformed by advances in data workflows, the methods used to communicate those discoveries—such as static PDFs—remain outdated. Our presentation explored the need for more dynamic and iterative mediums, such as MyST Markdown and Curvenote, to better integrate computational content directly into the scientific narrative. These tools enable scientists to continuously share and update their research in real-time, connecting software, data, and publication in ways that the current publishing system does not support.
+The Force11 Conference, is focused on the digital transformation of scholarly communication and gathers leading thinkers, researchers, and innovators from around the globe. This year’s theme revolved around advancing the way science is communicated and utilized, which perfectly aligns with Curvenote’s mission.
 
-In the same way that software development has embraced continuous delivery to speed up releases and improve feedback, we believe the scientific community can benefit from "continuous science". By automating parts of the publication process and reducing the time between peer feedback and publication, we can accelerate scientific progress and create a more interactive, robust research ecosystem.
+In his talk, Rowan emphasized a critical need in modern science: the necessity to communicate findings faster to enable quicker iterations. He articulated how traditional scientific processes often lead to delays, stalling innovation and discovery. Using two case studies one from Microscopy Society of America (https://elementalmicroscopy.com) and another from a UBC lab-group using Curvenote he demonstrates how the landscape of research constantly evolving and why it is essential that scientists convey their results efficiently to ensure that the scientific community can respond and adapt in real time.
 
 Our discussion at FORCE11 emphasized how this approach can reduce the gap between conducting research and sharing it with the world, ultimately pushing the boundaries of what is possible in open science.
+Rowan highlighted several key points:
+
+The Importance of Speed in Science
+: With research moving at an unprecedented pace, scientists need to communicate their findings sooner. Quick dissemination of information allows for timely feedback, which is crucial for refining hypotheses and experiments.
+
+Iterative Learning and Collaboration
+: Continuous science encourages an iterative approach where researchers can build off each other's work more effectively. This collaborative spirit fosters an environment where innovation thrives—one where ideas are not just disseminated but continuously developed and improved upon.
+
+Technological Evolution
+: Rowan discussed how leveraging technology can enhance the speed and clarity of scientific communication. Tools that enable real-time sharing of data and findings can significantly reduce the time between discovery and practical application.
+
+Better Outcomes through Openness
+: By adopting a more open and transparent approach to sharing research, scientists can engage a broader audience, enhancing visibility and fostering interdisciplinary collaboration. This openness can lead to richer insights and better results.
+
+Rowan's talk was well-received, receiving positive feedback and sparking engaging discussions among attendees. For those who missed it or want to revisit his key messages, highlights from the conference can be found in this video.
 
 :::{iframe} https://www.youtube-nocookie.com/embed/tpn7tGzFpfk?si=fW_IiVPKjDZ7ZCV6
 :width: 100%
 :label: force11-2024-video
 See @10.5281/zenodo.13208054 for presentation slides.
 :::
+
+As we continue to advocate for faster and more effective communication within the scientific community, Curvenote remains committed to providing the tools and platforms necessary for researchers to share their discoveries seamlessly. We believe that by adopting a continuous science approach, we can contribute to advancing the scientific process and enhancing the overall impact of research.
+
+Stay tuned for more updates from Curvenote and join us in our journey to reshape the future of scientific communication.
