--- a/force11-2021.md
+++ b/force11-2021.md
@@ -3,14 +3,7 @@ title: FORCE11 2021 Conference
 description: 'Curvenote is a Gold Sponsor of the upcoming the FORCE11 2021 conference.'
 date: 2021-11-16
 authors:
-  - name: Rowan Cockett
-    userId: vKndfPAZO7WeFxLH1GQcpnXPzfH3
-    orcid: 0000-0002-7859-8394
-    corresponding: null
-    email: null
-    roles: null
-    affiliations:
-      - Curvenote
+  - rowan
 tags:
   - update
   - open-science
