--- a/force11-2024.md
+++ b/force11-2024.md
@@ -4,11 +4,7 @@ subtitle: Insights from Rowan Cockett at the 2024 Force11 Conference
 description: 'At FORCE11 2024 Curvenote presented on our vision of Continuous Science, where the principles of continuous integration and deployment, well-known in software development, can be applied to scientific publishing to improve speed, reproducibility, and feedback loops.'
 date: 2024-08-01
 authors:
-  - name: Rowan Cockett
-    orcid: 0000-0002-7859-8394
-    email: rowan@curvenote.com
-    affiliations:
-      - Curvenote
+  - rowan
 tags:
   - open-science
   - conference
